kubernetes/external-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-ingress
  labels:
    name: external-ingress
