kubernetes/external-ingress/baikal.yaml
apiVersion: v1
kind: Service
metadata:
  name: baikal
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: baikal
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.100.173
  ports:
  - name: app
    port: 80
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: baikal
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dav.wrenspace.dev`)
      services:
        - name: baikal
          port: 80
  tls:
    secretName: baikal-tls
