kubernetes/external-ingress/cockpit.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockpit
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 9090
    protocol: TCP
    targetPort: 9090
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cockpit
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.1.69
  ports:
  - name: app
    port: 9090
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cockpit
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nix.wrenspace.dev`)
      services:
        - name: cockpit
          port: 9090
          serversTransport: cockpit-transport
  tls:
    secretName: cockpit-tls
