kubernetes/external-ingress/commafeed.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8082
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: commafeed
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.200.44
  ports:
  - name: app
    port: 8082
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: commafeed
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`feed.wrenspace.dev`)
      services:
        - name: commafeed
          port: 80
  tls:
    secretName: commafeed
