kubernetes/external-ingress/crafty-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: crafty-controller
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 8443
    protocol: TCP
    targetPort: 8443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: crafty-controller
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.1.74
  ports:
  - name: app
    port: 8443
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crafty-controller
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`craft.wrenspace.dev`)
      services:
        - name: crafty-controller
          port: 8443
          serversTransport: crafty-controller-transport
          scheme: https
  tls:
    secretName: crafty-controller-tls
