kubernetes/external-ingress/homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8123
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: hass
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.1.211
  ports:
  - name: app
    port: 8123
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.wrenspace.dev`)
      services:
        - name: hass
          port: 80
  tls:
    secretName: hass
