kubernetes/external-ingress/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8096
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.1.210
  ports:
  - name: app
    port: 8096
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`stream.wrenspace.dev`)
      services:
        - name: jellyfin
          port: 80
  tls:
    secretName: jellyfin
