kubernetes/external-ingress/jellyseerr.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 5055
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyseerr
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.200.12
  ports:
  - name: app
    port: 5055
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`req.stream.wrenspace.dev`)
      services:
        - name: jellyseerr
          port: 80
  tls:
    secretName: jellyseerr
