kubernetes/external-ingress/komga.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 25600
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: komga
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.100.66
  ports:
  - name: app
    port: 25600
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: komga
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`manga.wrenspace.dev`)
      services:
        - name: komga
          port: 80
  tls:
    secretName: komga
