kubernetes/external-ingress/longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.wrenspace.dev`)
      services:
        - name: longhorn-frontend
          port: 80
  tls:
  - hosts:
      - longhorn.wrenspace.dev
    secretName: longhorn
