kubernetes/external-ingress/opengist.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengist
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 6157
    protocol: TCP
    targetPort: 6157
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: opengist
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.200.18
  ports:
  - name: app
    port: 6157
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opengist
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gist.wrenspace.dev`)
      services:
        - name: opengist
          port: 6157
  tls:
    secretName: opengist-tls
