kubernetes/external-ingress/paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: paperless
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.100.4
  ports:
  - name: app
    port: 8000
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`file.wrenspace.dev`)
      services:
        - name: paperless
          port: 80
  tls:
    secretName: paperless
