kubernetes/external-ingress/proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve
  namespace: external-ingress
spec:
  ports:
  - name: https-pve
    port: 8006
    protocol: TCP
    targetPort: 8006
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.1.53
  ports:
  - name: https-pve
    port: 8006
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pve.wrenspace.dev`)
      services:
        - name: pve
          port: 8006
          serversTransport: pve-transport@kubernetescrd
  tls:
    secretName: pve
