kubernetes/external-ingress/synapse-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-admin
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 8080
    protocol: TCP
    targetPort: 8080
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: synapse-admin
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.200.32
  ports:
  - name: app
    port: 8080
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-admin
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`synapse.wrenspace.dev`)
      services:
        - name: synapse-admin
          port: 8080
  tls:
    secretName: synapse-admin-tls
