kubernetes/external-ingress/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: dashboard
      port: 9000
      targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.wrenspace.dev`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 9000
  tls:
    secretName: traefik-dashboard-tls
