kubernetes/external-ingress/uptime-kuma.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 3001
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: uptime-kuma
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.1.54
  ports:
  - name: app
    port: 3001
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ping.wrenspace.dev`)
      services:
        - name: uptime-kuma
          port: 80
  tls:
    secretName: uptime-kuma-tls
