kubernetes/external-ingress/vscode.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscode
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 8080
    protocol: TCP
    targetPort: 8080
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vscode
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.100.9
  ports:
  - name: app
    port: 8080
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vscode
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vs.wrenspace.dev`)
      services:
        - name: vscode
          port: 8080
  tls:
    secretName: vscode-tls
