kubernetes/external-ingress/zigbee2mqtt.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: external-ingress
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zigbee2mqtt
  namespace: external-ingress
subsets:
- addresses:
  - ip: 192.168.100.2
  ports:
  - name: app
    port: 80
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`iot.wrenspace.dev`)
      services:
        - name: zigbee2mqtt
          port: 80
  tls:
    secretName: zigbee2mqtt-tls
